package ca.mcmaster.cas735.tmt.hrm_receiver.business;

public interface SenMLFilter {

    boolean keep(String deviceId);


}
